--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div id="setupForm" class="setup-form">
-            <h2>Selamat Datang <br> di Chat Random</h2>
+            <h2>Selamat Datang <br> di Chat Para ALIENS 👽</h2>
             <input type="text" id="nameInput" placeholder="Masukkan nama Anda" required>
             <div class="character-selection">
                 <div class="character-option" onclick="selectCharacter('1')">
@@ -27,7 +27,7 @@
 
         <div id="chatContainer" class="chat-container" style="display: none;">
             <div class="chat-header">
-                <h2>Room Chat Random</h2>
+                <h2>Room Chat 👽</h2>
             </div>
             <div id="chatMessages" class="chat-messages"></div>
         
